--- a/templates/home_google.html
+++ b/templates/home_google.html
@@ -14,6 +14,7 @@
 
     <script type="text/javascript">
 		var map; //把变量map放在函数外部，用作全局变量
+		var marker;
 		function initMap() {
 			var mapOptions = {center: {lat: 39.915, lng: 116.404}, zoom: 8}
 			map = new google.maps.Map(document.getElementById('map'), mapOptions);
@@ -23,7 +24,14 @@
 		}
 
 		function placeMarker(location) {
-			var marker = new google.maps.Marker({position: location, map: map});
+			//如果标记已经存在，那么不创建新的标记，而是把已经存在的标记的位置移到新的位置
+			if (marker){
+				marker.setPosition(location);
+			}
+			//如果没有标记存在，则在点击处创建新的标记
+			else {
+				marker = new google.maps.Marker({position: location, map: map});
+			}
 		}
     </script>
 
