添加输入表单
需要有表单给用户进行输入，表单有几个新的元素，<textarea>相当于文本框用于输入较多文本，<label>用于标签其中for属性用于指示是哪个的标签。type='date'这是新的类型表示日期类型，可以方便输入日期不用手动全部输入。页面效果不佳后续需要添加CSS。

--- a/templates/home_google.html
+++ b/templates/home_google.html
@@ -2,21 +2,46 @@
 <html>
 
   <head>
+  	<title>我和城市的故事</title>
+  	<meta charset="utf-8">
     <style type="text/css">
       html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%; }
+      #map { height: 100%; width: 70% }
     </style>
   </head>
 
   <body>
+  	<h1>我与广州的故事</h1>
+  	<p>城市里留下了我的哪些足迹...</p>
     <!--此处的div是为了容纳JavaScript的组件，通过getElementById('map')来匹配-->
     <div id="map"></div>
+
+    <div id="recordform">
+		<h2>记录新鲜事</h2>
+		<form action="/submitrecord" method="POST">
+			<label for="category">Category</label>
+			<select name="category" id="category">
+				<option value="eating">吃喝</option>
+				<option value="playing">游玩</option>
+			</select>
+			<label for="date">Date</label>
+				<input name="日期" id="date" type="date">
+			<label for="latitude">Latitude</label>
+				<input name="latitude" id="latitude" type="text">
+			<label for="longitude">Longitude</label>
+				<input name="longitude" id="longitude" type="text">
+			<label for="description">Description</label>
+				<textarea name="description" id="description" placeholder="干什么去了..."></textarea>
+			<input type="submit" value="Submit">
+		</form>
+	</div>
 
     <script type="text/javascript">
 		var map; //把变量map放在函数外部，用作全局变量
 		var marker;
 		function initMap() {
-			var mapOptions = {center: {lat: 39.915, lng: 116.404}, zoom: 8}
+			//把地图中心定在广州市并放大适当倍数
+			var mapOptions = {center: {lat: 23.117055306224895, lng: 113.2759952545166}, zoom: 13}
 			map = new google.maps.Map(document.getElementById('map'), mapOptions);
 			//添加一个对鼠标单击的监听事件，构建匿名函数参数是该事件，随后触发函数placeMarker
 			//函数placeMarker的参数是点击事件的经纬度
