--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 body { 
 	font-family: sans-serif; 
 	background: #eee; 
+	margin: 13px;
 }
 
 input, select, textarea {
@@ -24,5 +25,6 @@ input[type="submit"]:hover {
 	background: steelblue;
 }
 
-#map { height: 100%; width: 70%; float: left; }
+/*这里map的height不能为100%，除非html,body标签元素的height也是100%，否则不能显示map部分*/
+#map { height: 600px; width: 70%; float: left; }
 #recordform { float: right; width: 25%; }
